--- a/week-6/sample.html
+++ b/week-6/sample.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div><p>
-            Add this <span>span tag</span> to a paragraph within a div tag
+            Katie said my website looks <span>SAD</span> so I put in a smiley face! <p2>&#128516</p2>
         </p></div>
         <script src="" async defer></script>
     </body>
