--- a/week-6/sample.html
+++ b/week-6/sample.html
@@ -12,6 +12,13 @@
     <body>
         <div><p>
             Katie said my website looks <span>SAD</span> so I put in a smiley face! <p2>&#128516</p2>
+            <div class="parent"
+  <div class="child box1">1</div>
+  <div class="child box2">2</div>
+  <div class="child box3">3</div>
+  <div class="child box4">4</div>
+  <div class="child box5">5</div>
+</div>
         </p></div>
         <script src="" async defer></script>
     </body>
